--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "@mui/icons-material": "^6.1.0",
     "@mui/lab": "^6.0.0-beta.9",
     "@mui/material": "^6.1.0",
+    "@mui/system": "^6.1.0",
     "@mui/x-date-pickers": "^7.27.3",
     "@reduxjs/toolkit": "^2.2.7",
+    "@stripe/react-stripe-js": "^3.4.0",
+    "@stripe/stripe-js": "^5.10.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
